tests/negative/neg_channel_package_not_withd.safe
-- Test: neg_channel_package_not_withd
-- Description: Qualified channel references require a matching with clause and interface.
-- Expected: REJECT source_frontend_error

package channel_package_not_withd_test

   task sender
      sent : boolean = false

      loop
         send missing_package.data_ch, 1, sent
